--- a/gameserver.ini
+++ b/gameserver.ini
@@ -1,191 +1,92 @@
-# [Log]
-# logVerbosity: Console log level (0=NONE; 1=FATAL; 2=ERROR; 3=WARN; 4=INFO; 5=DEBUG)
-# logFileVerbosity: File log level
-logVerbosity = 5
-logFileVerbosity = 0
+// Ogar Server configurations file
+// Lines starting with slashes are comment lines
 
-# [Server]
-# - serverTimeout: Seconds to keep connection alive for non-responding client
-# - serverPort: Server port which will be used to listen for incoming connections
-# - serverGamemode:
-#   0 : FFA
-#   1 : Teams
-#   2 : Experimental
-#   3 : Experimental Halloween
-#   4 : Experimental Christmas
-#   5 : Last Man Standing
-#   10: Tournament
-#   11: Hunger Games
-#   12: Zombie
-#   13: Zombie Teams
-#   14: Experimental Team
-#   15: Virus OFF
-#   20: Rainbow
-# - serverBots: Number of player bots to spawn (Experimental, -1 to turn off completly)
-# - serverStatsPort: Port for the stats server. Having a negative number will disable the stats server.
-# - serverDeflate: Enable or Disable zlib package compression (can cause issues in some browsers that do not support ws compression)
-# - serverRconPort: Put here the port to admin your server remote from either http://ogar.mivabe.nl/radmin
-#   or by uploading the radmin folder to your server. Aslo make sure you put the ip's and password in the
-#   userRoles.json file to gran admin access to your self and or other users.
-# - serverStatsUpdate: Update interval of server stats in seconds
-# - serverResetTime: Resets server after the omited hours here
-serverTimeout = 300
-serverMaxConnections = 64
-serverPort = 604
-serverDeflate = 1
-serverRconPort = -1
+// [Server]
+// Protocol to use, 1 for new (v561.20 and up) and 0 for old (old means privat clients that are not agar.io compataible)
+// serverGamemode: 0 = FFA, 1 = Teams, 2 = Experimental, 10 = Tournament, 11 = Hunger Games
+// serverBots: Amount of player bots to spawn (Experimental)
+// serverViewBase: Base view distance of players. Warning: high values may cause lag
+// serverStatsPort: Port for the stats server. Having a negative number will disable the stats server.
+// serverResetTime: Time in hours to shut down the server (0 is off)
+// serverStatsUpdate: Amount of seconds per update for server stats
+// serverLogLevel: Logging level of the server. 0 = No logs, 1 = Logs the console, 2 = Logs console and ip connections
+serverMaxConnections = 100
+serverPort = 4411
+serverVersion = 1
 serverGamemode = 0
-serverBots = -1
+serverResetTime = 48
+serverBots = 2
+serverViewBaseX = 1200
+serverViewBaseY = 630
 serverStatsPort = -88
 serverStatsUpdate = 60
-serverLiveStats = 1
-serverResetTime = 24
+serverLogLevel = 2
 
-# [Client]
-# - serverViewBase: Base view distance of players. Warning: high values may cause lag! Min value is 1920x1080
-# - serverSpectatorScale: Scale (field of view) used for free roam spectators (low value leads to lags, vanilla=0.4, old vanilla=0.25)
-# - serverSpectatorScale: Scale (field of view) used for free roam spectators (low value leads to lags, vanilla=0.4, old vanilla=0.25)
-# - serverMaxLB: Controls the maximum players displayed on the leaderboard.
-# - serverChat: Allows the usage of server chat. 0 = no chat, 1 = use chat.
-# - serverWelcome1: First server welcome message
-# - serverWelcome2: Second server welcome message (optional, for info, etc)
-serverViewBaseX = 1920
-serverViewBaseY = 1080
-serverSpectatorScale = 0.4
-serverMaxLB = 15
-serverChat = 1
-serverChatAscii = 0
-serverWelcome1 = "Welcome to this Ogar FlOw Server! No Botting, play fair and have fun!"
-serverWelcome2 = "This server auto restarts every 24 hours, see leaderboard for time left!"
+// [Admin and Tracker
+// The name to display on the tracker (leave empty will show ip:port) so http://ogar.mivabe.nl/master. Do not put http:\\ ! 
+// Remote console commands password, if you wish to send commands to server true chat put the password here
+// uncomment the one, both or none if you wish to use one of the futures below
+// serverName = localhost.com
+// serverAdminPass = yourpassword
 
-# [ANTI-Bot]
-# - serverIpLimit: Controls the maximum connections from single IP (use 0 to disable)
-# - serverMinionIgnoreTime: minion detection disable time on server startup [seconds]
-# - serverMinionThreshold: max connections within serverMinionInterval time period, which will not be marked as minion
-# - serverMinionInterval: minion detection interval [milliseconds]
-# - serverScrambleLevel: Toggles scrambling of coordinates. 0 = No scrambling, 1 = lightweight scrambling. 2 = full scrambling (also known as scramble minimap), 3 - high level scrambling (no border)
-# - playerBotGrow: Cells greater than 625 mass cannot grow from cells under 17 mass (set to 1 to disable)
-serverIpLimit = 14
-serverMinionIgnoreTime = 30
-serverMinionThreshold = 10
-serverMinionInterval = 1000
-serverScrambleLevel = 0
-playerBotGrow = 0
+// [Chat]
+chatMaxMessageLength = 70
+chatToConsole = 1
+chatIntervalTime = 10000
 
-# [Tracker]
-# - serverName = the name of your server, as how it be listed on the tracker if you enabled this
-# - serverURL = the website of your client, if none leave it empty (no http://)
-# - serverTracker: Set to 1 if you want to show your server on the tracker http://ogar.mivabe.nl/master
-#   (check that your server port is opened for external connections before setting it to 1)
-serverTracker = 1
-serverName = "Unnamed Server"
-serverURL = ""
+// [Border]
+// Border values of the map (Vanilla values are left/top = 0, right/bottom = 12000)
+borderLeft = 0
+borderRight = 12000
+borderTop = 0
+borderBottom = 12000
 
-# [Border]
-# - Border size (vanilla 14142)
-borderWidth = 14142
-borderHeight = 14142
-
-# [Spawn]
-# Each interval is 1 tick (40 ms)
-# - foodMinSize: vanilla 10 (mass = 10*10/100 = 1)
-# - foodMaxSize: vanilla 20 (mass = 20*20/100 = 4)
-# - spawnInterval: number of ticks to spawn (effetcs both food and virus)
-foodMinSize = 10
-foodMaxSize = 20
-foodMinAmount = 1500
-foodMaxAmount = 3000
-foodSpawnAmount = 400
-foodMassGrow = 1
+// [Spawn]
+// Each interval is 1 tick (50 ms)
 spawnInterval = 10
+foodSpawnAmount = 100
+foodStartAmount = 1750
+foodMaxAmount = 2000
+foodMass = 1
+virusMinAmount = 30
+virusMaxAmount = 75
+virusStartMass = 100
+virusFeedAmount = 25
 
-# [VIRUSES]
-# - virusMinSize: vanilla 100 (mass = 100*100/100 = 100)
-# - virusMaxSize: vanilla 140 (mass = 140*140/100 = 196)
-# - virusMinAmount: Minimum number of virus cells in the map
-# - virusMaxAmount: Maximum number of virus cells in the map
-# - virusSpirals: Enable or disable of Virus Spirals
-# - virusMoving : Spawn also Moving Virus
-virusMinSize = 100
-virusMaxSize = 140
-virusMinAmount = 38
-virusMaxAmount = 88
-virusSpirals = 0
-virusMoving = 0
+// [Ejected Mass]
+// ejectMass: Mass of ejected cells
+// ejectMassLoss: Mass lost when ejecting cells
+// ejectSpeed: Base speed of ejected cells
+// ejectSpawnPlayer: Chance for a player to spawn from ejected mass
+ejectMass = 12
+ejectMassLoss = 25
+ejectSpeed = 160
+ejectSpawnPlayer = 50
 
-# [Ejected Mass]
-# - ejectSize: vanilla 37 (mass = 37*37/100 = 13.69)
-# - ejectSizeLoss: Eject size which will be substracted from player cell (vanilla 43?)
-# - ejectCooldown: Tick count until a player can eject mass again (1 tick = 40 ms)
-# - ejectSpawnPercent: Chance for a player to spawn from ejected mass. 0.5 = 50% (set to 0 to disable)
-# - ejectSpawnPlayer: Spawn ontop ejected mass
-ejectSize = 38
-ejectSizeLoss = 43
-ejectDistance = 780
-ejectCooldown = 0
-ejectSpawnPlayer = 0
-
-
-# [PLAYERS]
-# Reminder: MultiOgar uses cell size instead of mass!
-#       playerStartMass replaced with playerStartSize
-#
-# - playerMinSize: vanilla 32 (mass = 32*32/100 = 10.24)
-# - playerMaxSize: vanilla 1500 (mass = 1500*1500/100 = 22500)
-# - playerMinSplitSize: vanilla 60 (mass = 60*60/100 = 36)
-# - playerStartSize: Start size of the player cell (mass = 32*32/100 = 10.24)
-# - playerSpeed: Player speed multiplier (1=normal speed, 2=twice faster)
-# - playerRecombineTime: Base time in seconds before a cell is allowed to recombine
-# - playerDecayRate: Amount of size lost per second
-# - playerDecayCap: Maximum mass a cell can have before it's decayrate multiplies by 10. (0 to disable)
-# - playerDisconnectTime: Time in seconds before a disconnected player's cell is removed (Set to -1 to never remove)
-playerMinSize = 32
-playerMaxSize = 1500
-playerMinSplitSize = 60
-playerStartSize = 64
+// [Player]
+// playerRecombineTime: Base amount of ticks before a cell is allowed to recombine (1 tick = 1000 milliseconds)
+// playerMassDecayRate: Amount of mass lost per tick (Multiplier) (1 tick = 1000 milliseconds)
+// playerMinMassDecay: Minimum mass for decay to occur
+// playerDisconnectTime: The amount of seconds it takes for a player cell to be removed after disconnection (If set to -1, cells are never removed)
+playerStartMass = 30
+playerMaxMass = 22500
+playerSpeed = 30
+playerMinMassEject = 32
+playerMinMassSplit = 36
 playerMaxCells = 16
-playerSpeed = 1.75
-playerDecayRate = .002
 playerRecombineTime = 30
+playerMassDecayRate = .002
+playerMinMassDecay = 200
 playerMaxNickLength = 15
-playerDisconnectTime = 20
-playerDisconnectBoom = 1
+playerDisconnectTime = 300
 
-# [Minions]
-# Custom minion settings
-# - minionStartSize: Start size of minions (mass = 32*32/100 = 10.24)
-# - minionMaxStartSize: Maximum value of random start size for minions (set value higher than minionStartSize to enable)
-# - disableERTP: Whether or not to disable ERTP controls for minions. (must use ERTPcontrol script in /scripts) (Set to 0 to enable)
-# - disableQ: Whether or not to disable Q controls for minions. (Set 0 to enable)
-# - serverMinions: Amount of minions each player gets once they spawn
-# - defaultName: Default name for all minions if name is not specified using command (put <r> before the name for random skins!)
-# - collectPellets: Enable collect pellets mode for minions. To use, use the ERTPcontrol script and press "P"
-minionStartSize = 32
-minionMaxStartSize = 32
-disableERTP = 1
-disableQ = 0
-serverMinions = 0
-defaultName = "minion"
-collectPellets = 0
-
-# Tournament (Game Mode 10)
-# - tourneyTimeLimit: Time limit of the game, in minutes.
-# - tourneyAutoFill: If set to a value higher than 0, the tournament match will automatically fill up with bots after value seconds
-# - tourneyAutoFillPlayers: The timer for filling the server with bots will not count down unless there is this amount of real players
+// [Gamemode]
+// Custom gamemode settings
+// tourneyTimeLimit: Time limit of the game, in minutes.
+// tourneyAutoFill: If set to a value higher than 0, the tournament match will automatically fill up with bots after value seconds
+// tourneyAutoFillPlayers: The timer for filling the server with bots will not count down unless there is this amount of real players
 tourneyMaxPlayers = 12
 tourneyPrepTime = 10
 tourneyEndTime = 30
 tourneyTimeLimit = 20
 tourneyAutoFill = 0
-tourneyAutoFillPlayers = 1
-
-# Last Man Standing (Game Mode 21)
-# When it starts/ends is decided randomly just like vanilla, based on the values below
-# - lastManStandingShortest: Shortest amount of time possible before LMS happens in minutes
-# - lastManStandingLongest: Longest amount of time possible before LMS happens in minutes
-# - lastManStandingKickShortest: Shortest amount of minutes till kicking time
-# - lastManStandingKickLongest: Longest amount of minutes till kicking time
-lMSShortest = 60
-lMSLongest = 120
-lMSKickShortest = 30
-lMSKickLongest = 60
